fix contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ p {
     transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
-    background-color: #D1D1D1;
+    background-color: #fff;
 }
 
 .navStyle ul li a:hover {
